PHOENIX-7036 Copy the Java version specific profiles for JVM options from HBase